[package]
name = "tsbot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poise = "0.6.1"
serenity = { version = "0.12.4", features = ["client", "gateway", "http", "model", "standard_framework"] }
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"